erDiagram

    USERS {
        uuid id PK
        string email UK
        string hashed_password
        string role
        boolean is_active
        boolean is_staff
        timestamp last_login
        timestamp created_at
    }

    COUNTRY {
        bigint id PK
        string code UK
        string label
        string document_type
        string document_hint
        string document_example
        string document_regex
        boolean is_active
    }

    COUNTRY_STATUS {
        bigint id PK
        bigint country_id FK
        string code
        string label
        boolean is_initial
        boolean is_terminal
        int order
    }

    STATUS_TRANSITION {
        bigint id PK
        bigint from_status_id FK
        bigint to_status_id FK
    }

    CREDIT_APPLICATIONS {
        uuid id PK
        uuid user_id FK
        bigint country_ref_id FK
        string full_name
        string document_type
        string document_number
        decimal amount_requested
        decimal monthly_income
        bigint status_id FK
        timestamp requested_at
        timestamp updated_at
    }

    COUNTRY_VALIDATIONS {
        uuid id PK
        uuid application_id FK
        string rule_name
        boolean passed
        string detail
        timestamp evaluated_at
    }

    BANK_PROVIDER_DATA {
        uuid id PK
        uuid application_id FK
        string provider_name
        decimal total_debt
        int credit_score
        string account_status
        jsonb raw_response
        timestamp fetched_at
    }

    APPLICATION_STATUS_HISTORY {
        uuid id PK
        uuid application_id FK
        string from_status
        string to_status
        string changed_by
        jsonb metadata
        timestamp changed_at
    }

    USERS ||--o{ CREDIT_APPLICATIONS : "crea"
    COUNTRY ||--o{ COUNTRY_STATUS : "define estados"
    COUNTRY_STATUS ||--o{ STATUS_TRANSITION : "from_status"
    COUNTRY_STATUS ||--o{ STATUS_TRANSITION : "to_status"
    COUNTRY ||--o{ CREDIT_APPLICATIONS : "country_ref"
    COUNTRY_STATUS ||--o{ CREDIT_APPLICATIONS : "status actual"
    CREDIT_APPLICATIONS ||--o{ COUNTRY_VALIDATIONS : "tiene"
    CREDIT_APPLICATIONS ||--|| BANK_PROVIDER_DATA : "tiene"
    CREDIT_APPLICATIONS ||--o{ APPLICATION_STATUS_HISTORY : "registra"
